Fix button height in stretch

--- a/src/blocks/button-maxi/style.scss
+++ b/src/blocks/button-maxi/style.scss
@@ -5,7 +5,7 @@ body.maxi-blocks--active .maxi-button-extra {
 	margin: 0;
 
 	&__button {
-		height: inherit;
+		height: auto;
 	}
 	a {
 		display: inline-block;
